2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.3 patch release.

	* configure.ac (AC_INIT): Increment patch level.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Emulate glibc <string.h> POSIX.1 non-compliance.

	* include/_mingw.h.in (_EMULATE_GLIBC): New feature test macro.
	[_GNU_SOURCE || _BSD_SOURCE || !__STRICT_ANSI__]: Enable it when...
	[_XOPEN_SOURCE || _POSIX_C_SOURCE || _POSIX_SOURCE]: ...none of
	these have been pre-defined by the user.

	* include/string.h [_EMULATE_GLIBC]: Include <strings.h> in full...
	(strcasecmp, strncasecmp): ...so prototypes for these are declared.
	[!_EMULATE_GLIBC]: Preserve partial <strings.h> include, guarded by...
	[__STRING_H_SOURCED__]: ...this context selector, so suppressing the
	declarations of those function prototypes.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve some non-ANSI typedef omissions.

	* include/sys/types.h (off_t, ssize_t): Always typedef them when...
	[_POSIX_C_SOURCE || !_NO_OLDNAMES]: ...either of these prevails.

	* include/io.h (_fsize_t): Do not suppress its typedef when...
	[__STRICT_ANSI__]: ...this compiler option applies, irrespective of...
	[!(_IO_H && _WCHAR_H)]: ...this, which otherwise causes supression.

2016-09-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.2 patch release.

	* configure.ac (AC_INIT): Increment patch level.
	* config.guess config.sub: Delete, per 2016-07-16 commit.
	* include/stdlib.h: Backport, per 2016-09-14 commit.
	* include/wchar.h: Backport, per 2016-09-17 commits.

2016-09-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add missing <wchar.h> declarations when compiling C++.

	* include/wchar.h (fwide, mbsinit, wmemset, wmemchr, wmemcpy)
	(wmemmove, wcstoll, wcstoull): Declare each of these for either of...
	[_ISOC99_SOURCE || __cplusplus]: ...these conditions, rather than...
	[_ISOC99_SOURCE]: ...this alone.
